force-app/main/default/objects/Audit_Officer__c/Audit_Officer__c.object-meta.xml
<CustomObject>
    <label>Admission Officer</label>
    <nameField>
        <displayFormat>AO-{000}</displayFormat>
        <label>Audit Officer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admission Officers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>