force-app/main/default/objects/Audit_Officer__c/fields/AO__c.field-meta.xml
<CustomField>
    <fullName>AO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Officers</relationshipName>
    <type>Lookup</type>
</CustomField>