force-app/main/default/objects/Audit_Officer__c/fields/AO_Email__c.field-meta.xml
<CustomField>
    <fullName>AO_Email__c</fullName>
    <formula>AO__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AO Email</label>
    <type>Text</type>
</CustomField>