force-app/main/default/objects/Audit_Officer__c/fields/Last_RRid__c.field-meta.xml
<CustomField>
    <fullName>Last_RRid__c</fullName>
    <label>Last RRid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>