force-app/main/default/objects/Audit_Officer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Last_RRid__c</columns>
    <columns>AO__c</columns>
    <columns>AO_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>